# nix-box

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  flake.nix  justfile
.github/workflows/: codeql.yml  publish.yml
crates/nixbox/: Cargo.toml
crates/nixbox-config/: Cargo.toml
crates/nixbox-config/src/: lib.rs
crates/nixbox-nix/: Cargo.toml
crates/nixbox-nix/src/: build.rs  lib.rs  manifest.rs  scan.rs  search.rs
crates/nixbox-tui/: Cargo.toml
crates/nixbox-tui/src/: app.rs  handlers.rs  lib.rs  nav.rs  ops.rs  state.rs  theme.rs  ui.rs
crates/nixbox-tui/src/ui/: bars.rs  build.rs  installed.rs  mod.rs  popups.rs  queue.rs  search.rs
crates/nixbox/src/: main.rs
nix/: package.nix  vm.nix
