[workspace]
resolver = "2"
members = [
    "crates/nixbox",
    "crates/nixbox-tui",
    "crates/nixbox-nix",
    "crates/nixbox-config",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Rajveer Singh"]
license = "Apache-2.0"
repository = "https://github.com/SINGH-RAJVEER/nix-box"
homepage = "https://github.com/SINGH-RAJVEER/nix-box"
readme = "README.md"
keywords = ["nixos", "nix", "tui", "package-manager", "home-manager"]
categories = ["command-line-utilities"]
description = "TUI package manager for NixOS that wires selections into your flake + home-manager config"

[workspace.dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "io-util", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ratatui = "0.28"
crossterm = { version = "0.28", features = ["event-stream"] }
tui-input = "0.10"
clap = { version = "4.5", features = ["derive"] }
directories = "5.0"
futures = "0.3"
