[package]
name = "nixbox-tui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Ratatui front-end (search/build views, theming) for the nixbox TUI."

[dependencies]
nixbox-nix = { path = "../nixbox-nix", version = "0.1.4" }
nixbox-config = { path = "../nixbox-config", version = "0.1.4" }
anyhow = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
tui-input = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
